# wasabi-geom

./: .gitignore  .hgignore  AUTHORS  LICENSE  MANIFEST.in  README.md  README.rst  benchmark.py  cyvec.pyx  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  test_cyvec.py  test_wasabigeom.py  wasabigeom.pyx
.github/workflows/: auto_merge.yml  auto_tag.yml  backfill_wheels.yml  wheels.yml
doc/: Makefile  api.rst  changelog.rst  conf.py  index.rst  lines.rst  polygons.rst  spatialhash.rst  vectors.rst
examples/: arc.py  bezier.py  path.py
notebooks/: Transforms.ipynb
tests/: conftest.py  test_rect.py  test_wasabigeom.py
wasabi/geom/: __init__.py  lines.py  poly.py  spatialhash.py  vector.py
