[metadata]
name = wasabi-geom
version = 2.0.1
description = 2D vector, line and polygon classes, and a spatial hash implementation
author = Daniel Pope
author_email = mauve@mauveweb.co.uk
url = https://github.org/lordmauve/wasabigeom
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3


[options]
zip_safe = False
