[metadata]
name = wasabi-geom
version = 2.3.0
description = 2D vector, line and polygon classes, and a spatial hash implementation
author = Daniel Pope
author_email = mauve@mauveweb.co.uk
url = https://github.com/lordmauve/wasabigeom
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
python_requires = >=3.8
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Home=https://github.com/lordmauve/wasabigeom


[options.extras_require]
dev =
    pytest
    hypothesis
    Sphinx>=2
    numpy
    pygame
    bump-my-version


[options]
zip_safe = False
